<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/back"
        android:scaleType="centerCrop"
        android:alpha="0.08"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/languageAndLottieContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:background="@color/separateur"
            android:clipToOutline="true">

            <TextView
                android:id="@+id/langFR"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="FR"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="?attr/selectableItemBackground"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="?attr/buttonOutlineColor" />

            <TextView
                android:id="@+id/langEN"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="EN"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="?attr/selectableItemBackground"/>
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimation"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            app:lottie_rawRes="@raw/show"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="30dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/ignorer"
        android:background="@drawable/bouton_outline"
        app:layout_constraintTop_toTopOf="@id/guideTop"
        app:layout_constraintBottom_toTopOf="@+id/stepTitle"
        app:layout_constraintStart_toStartOf="@id/gameContainer"
        app:layout_constraintEnd_toEndOf="@id/gameContainer"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/stepTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnSkip"
        app:layout_constraintBottom_toTopOf="@+id/gameContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/gameContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/stepTitle"
        app:layout_constraintBottom_toTopOf="@id/messageText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1">
        <VideoView android:id="@+id/tutorialVideo" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </FrameLayout>

    <TextView
        android:id="@+id/messageText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/afficher"
        android:gravity="center"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/gameContainer"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="@id/gameContainer"
        app:layout_constraintEnd_toEndOf="@id/gameContainer"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/jouer"
        android:layout_marginTop="15dp"
        android:background="@drawable/bouton_filled"
        app:layout_constraintTop_toBottomOf="@id/messageText"
        app:layout_constraintBottom_toBottomOf="@id/guideBottom"
        app:layout_constraintStart_toStartOf="@id/gameContainer"
        app:layout_constraintEnd_toEndOf="@id/gameContainer"/>

</androidx.constraintlayout.widget.ConstraintLayout>